# personal_website

backend/: pyproject.toml
backend/blog/: db.sqlite  pyproject.toml
backend/blog/app/: __init__.py  resources.py  schemas.py
backend/blog/app/db/: db.py  models.py
backend/blog/app/routers/: blog.py
backend/cvdata/: pyproject.toml
backend/cvdata/app/: __init__.py  resources.py  schemas.py
backend/cvdata/app/db/: db.py  models.py
backend/cvdata/app/routers/: education.py  experience.py
backend/src/: __init__.py
backend/src/api/articles/: article_manager.py  routes.py  schemas.py
backend/src/api/blog/: blog_manager.py  routes.py  schemas.py
backend/src/api/credentials/: credential_manager.py  routes.py  schemas.py
backend/src/api/db/: models.py
backend/src/api/posts/: routes.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/pages/Home/: Home.css  Home.jsx
frontend/src/pages/Home/page_components/About/: About.css  About.jsx
frontend/src/pages/Home/page_components/Contact/: Contact.css  Contact.jsx
frontend/src/pages/Home/page_components/Header/: Header.css  Header.jsx
frontend/src/pages/Home/page_components/Navbar/: NavBar.jsx  Navbar.css
frontend/src/pages/Home/page_components/Projects/: Projects.css  Projects.jsx
frontend/src/pages/Home/page_components/Resume/: Resume.css  Resume.jsx
frontend/src/pages/Home/page_components/Resume/CV/: CV.jsx  cv.css
frontend/src/pages/Home/page_components/Resume/EducationHistory/: EducationHistory.css  EducationHistory.jsx
(+2 files in other folders)
